change to jdk v17: version change for more compatibility & fix(wrapToStackPane): if root isn't a StackPane, set root of scene to new Root